--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "intersection-observer": "^0.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
