--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
