--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "standard",
     "lint-fix": "standard --fix",
     "build": "webpack",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +41,7 @@
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
+    "@reach/router": "^1.3.1",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "intersection-observer": "^0.7.0",
