--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint-fix": "standard --fix",
     "build": "webpack",
     "dev": "webpack-dev-server --history-api-fallback",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve:dev": "webpack --mode 'development' && npx serve dist -s "
   },
   "repository": {
     "type": "git",
