--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "standard": "^14.3.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-server": "^3.7.1",
+    "webpack-pwa-manifest": "^4.2.0"
   },
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
