--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
-    "webpack-pwa-manifest": "^4.2.0"
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^5.0.0"
   },
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
