--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "standard --fix",
     "build": "webpack",
     "dev": "webpack-dev-server --history-api-fallback",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cypress open",
     "serve:dev": "webpack --mode 'development' && npx serve dist -s "
   },
   "repository": {
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
+    "cypress": "^4.0.2",
     "eslint": "^6.8.0",
     "html-webpack-plugin": "^3.2.0",
     "standard": "^14.3.1",
